Delete search profile by id
