# src/main/resources/static/api.yaml
@@ -184,12 +184,26 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SearchProfile'
+              $ref: '#/components/schemas/CreateSearchProfile'
       responses:
         '201':
           description: Search profile successfully created.
         '401':
           description: Unauthorized.
+
+  '/search-profiles/{id}':
+    parameters:
+      - $ref: '#/components/parameters/searchProfileIdPathParameter'
+    delete:
+      summary: Deletes a search profile
+      operationId: deleteSearchProfile
+      tags:
+        - search-profile
+      responses:
+        '204':
+          description: Successfully deleted search profile
+        '404':
+          $ref: '#/components/responses/NotFound'
 
 components:
   schemas:
@@ -333,7 +347,7 @@ components:
         - description
         - isSearching
 
-    SearchProfile:
+    CreateSearchProfile:
       type: object
       properties:
         userId:
@@ -378,13 +392,62 @@ components:
         - bedroomOptions
         - bathroomOptions
 
+    SearchProfileByUser:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        userId:
+          type: integer
+          format: int64
+        rentPriceLowerBound:
+          type: number
+          format: double
+        rentPriceUpperBound:
+          type: number
+          format: double
+        latitude:
+          type: number
+          format: double
+        longitude:
+          type: number
+          format: double
+        rentMatesGenderOptions:
+          type: array
+          items:
+            type: string
+        rentMateCountOptions:
+          type: array
+          items:
+            type: string
+        bedroomOptions:
+          type: array
+          items:
+            type: string
+        bathroomOptions:
+          type: array
+          items:
+            type: string
+      required:
+        - id
+        - userId
+        - rentPriceLowerBound
+        - rentPriceUpperBound
+        - latitude
+        - longitude
+        - rentMatesGenderOptions
+        - rentMateCountOptions
+        - bedroomOptions
+        - bathroomOptions
+
     SearchProfilesByUser:
       type: object
       properties:
         searchProfiles:
           type: array
           items:
-            $ref: '#/components/schemas/SearchProfile'
+            $ref: '#/components/schemas/SearchProfileByUser'
       required:
         - searchProfiles
 
@@ -392,6 +455,15 @@ components:
     userIdPathParameter:
       name: userId
       description: User id
+      in: path
+      required: true
+      schema:
+        type: integer
+        format: int64
+
+    searchProfileIdPathParameter:
+      name: id
+      description: Search profile id
       in: path
       required: true
       schema:
